# mlobs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mlobs/: __init__.py  _version.py
src/mlobs/adapters/: __init__.py  arrow_adapter.py  base.py  pandas_adapter.py  polars_adapter.py
src/mlobs/core/: __init__.py  types.py
src/mlobs/drift/: __init__.py  detectors.py  report.py
src/mlobs/logging/: __init__.py  formatters.py  pipeline.py
tests/: conftest.py  test_drift.py  test_pipeline_logging.py
